--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 ### Site Settings ###
 title               : Sandeep Menon
 description         : >-
-                      I turn coffee :coffee: into code,
-                      use tabs over spaces
-                      and never broke production.
+                      Hi there 👋, I'm Sandeep - a Siebel CRM consultant, a self taught web developer and a hobbyist programmer.
 baseurl             : ""                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : sandeep-menon/sandeep-menon.github.io     # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : YoussefRaafatNasry/portfolYOU
