--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,17 +1,19 @@
-- title: Student, Harvard CS
-  from: 2014
-  to: 2018
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+- title: Technical Lead, Accenture, India
+  from: Feb 2021
+  to: Present
+  description: Serving as a Technical Lead for a team of 20+ developers. Solving mission critical issues, providing technical expertise to solve problems and designing solutions to complex requirements.
 
-- title: Software Engineer, Google, UK
-  from: 2018
-  to: present
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+- title: Senior Software Engineer, Accenture, India
+  from: Feb 2019
+  to: Jan 2021
+  description: Built many end-to-end, customer centric requirements in the realm of Mobile and Fixed Line.
+
+- title: Package Solution Consultant - Siebel CRM, IBM, India
+  from: Oct 2013
+  to: Jan 2019
+  description: Achieving new client requirements with Siebel Open UI and retrofitting existing functionality for non-IE browsers. Experienced in combining extensive Siebel configuration capabilities with web development technologies provided by Siebel Open UI framework.
+
+- title: B.Tech. Civil Engineering - NIT Silchar, India
+  from: 2009
+  to: 2013
+  description: I don't remember much.
