first blog post

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 ### Site Settings ###
+### bundle exec jekyll serve ###
 title               : Sandeep Menon
 description         : >-
                       Hi there 👋, I'm Sandeep. 
