--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -16,4 +16,4 @@
 - title: B.Tech. Civil Engineering - NIT Silchar, India
   from: 2009
   to: 2013
-  description: I don't remember much.
+  description: 
